--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nx/web": "20.0.0",
     "@nx/workspace": "20.0.0",
     "@playwright/test": "^1.36.0",
+    "@shadcn/ui": "^0.0.4",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
