Update Tailwind CSS paths and adjust TypeScript configuration for shared library

--- a/components.json
+++ b/components.json
@@ -3,8 +3,8 @@
   "style": "new-york",
   "rsc": false,
   "tailwind": {
-    "config": "apps/**/tailwind.config.js",
-    "css": "apps/**/app/global.css",
+    "config": "apps/demo/tailwind.config.js",
+    "css": "apps/demo/src/styles.css",
     "baseColor": "stone",
     "cssVariables": true
   },
