--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@my-org/shared": ["shared/src/index.ts"],
-      "@my-org/shared/*": ["shared/src/*"]
+      "@react-monorepo/shared": ["libs/shared/src/index.ts"],
+      "@react-monorepo/shared/*": ["libs/shared/src/*"]
     }
   }
 }
