--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@react-monorepo/shared": ["libs/shared/src/index.ts"]
+      "@react-monorepo/shared": ["libs/shared/src/index.ts"],
+      "@react-monorepo/shared/*": ["libs/shared/src/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
