Feat/add all shadcn components (#3)
* Update Tailwind CSS paths and adjust TypeScript configuration for shared library

* Add new UI components and hooks for shared library, update utils path

--- a/components.json
+++ b/components.json
@@ -3,13 +3,13 @@
   "style": "new-york",
   "rsc": false,
   "tailwind": {
-    "config": "apps/**/tailwind.config.js",
-    "css": "apps/**/app/global.css",
+    "config": "apps/demo/tailwind.config.js",
+    "css": "apps/demo/src/styles.css",
     "baseColor": "stone",
     "cssVariables": true
   },
   "aliases": {
     "components": "@react-monorepo/shared/components",
-    "utils": "@react-monorepo/shared/shared/utils"
+    "utils": "@react-monorepo/shared/lib/utils"
   }
 }
