--- a/apps/demo/project.json
+++ b/apps/demo/project.json
@@ -4,6 +4,20 @@
   "sourceRoot": "apps/demo/src",
   "projectType": "application",
   "tags": [],
-  "// targets": "to see all targets run: nx show project demo --web",
-  "targets": {}
+  "targets": {
+    "build": {
+      "executor": "@nx/vite:build",
+      "options": {
+        "outputPath": "dist/apps/demo",
+        "sourcemap": true
+      }
+    },
+    "serve": {
+      "executor": "@nx/vite:dev-server",
+      "options": {
+        "buildTarget": "demo:build",
+        "sourcemap": true
+      }
+    }
+  }
 }
