--- a/package.json
+++ b/package.json
@@ -1,21 +1,58 @@
 {
   "name": "@react-monorepo/source",
   "version": "0.0.0",
+  "description": "An Nx Monorepo setup with React, Vite, Tailwind CSS, and Shadcn UI.",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-repo/nx-react-tailwind-shadcn-boilerplate.git"
+  },
+  "keywords": [
+    "nx",
+    "react",
+    "tailwindcss",
+    "shadcn-ui",
+    "monorepo",
+    "vite"
+  ],
+  "author": "Your Name <your-email@example.com>",
+  "bugs": {
+    "url": "https://github.com/your-repo/nx-react-tailwind-shadcn-boilerplate/issues"
+  },
   "scripts": {
-    "build": "nx build",
-    "build:all": "nx run-many --target=build --all",
     "build:affected": "nx affected --target=build",
-    "test": "nx test",
-    "test:all": "nx run-many --target=test --all",
-    "test:affected": "nx affected --target=test",
-    "lint": "nx lint",
-    "lint:all": "nx run-many --target=lint --all",
-    "lint:affected": "nx affected --target=lint",
-    "serve:demo": "nx serve demo",
-    "format": "nx format:write",
+    "build:all": "nx run-many --target=build --all",
+    "build": "nx build",
+    "clean": "nx run-many --target=clean --all",
     "format:check": "nx format:check",
-    "clean": "nx run-many --target=clean --all"
+    "format": "nx format:write",
+    "lint:affected": "nx affected --target=lint",
+    "lint:all": "nx run-many --target=lint --all",
+    "lint": "nx lint",
+    "precommit": "pnpm run lint && pnpm run typecheck && pnpm run test && pnpm run build",
+    "prepare": "husky",
+    "serve:demo": "nx serve demo",
+    "test:affected": "nx affected --target=test",
+    "test:all": "nx run-many --target=test --all",
+    "test:e2e": "nx e2e",
+    "test": "nx test",
+    "typecheck": "tsc --noEmit"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "pnpm run precommit"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "nx lint",
+      "nx test --bail --findRelatedTests",
+      "nx build --dry-run"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   },
   "private": true,
   "packageManager": "pnpm@8.6.3",
@@ -108,9 +145,11 @@
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "~22.1.0",
+    "lint-staged": "^15.2.10",
     "nx": "20.0.0",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
