--- a/components.json
+++ b/components.json
@@ -9,7 +9,7 @@
     "cssVariables": true
   },
   "aliases": {
-    "components": "@react-monorepo/shared/components",
-    "utils": "@react-monorepo/shared/lib/utils"
+    "components": "@rwoc/shared/components",
+    "utils": "@rwoc/shared/lib/utils"
   }
 }
