--- a/libs/shared/package.json
+++ b/libs/shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-monorepo/shared",
+  "name": "@rwoc/shared",
   "version": "0.0.1",
   "main": "./index.js",
   "types": "./index.d.ts",
