--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-monorepo/source",
+  "name": "react-weapons-of-choice",
   "version": "0.0.0",
   "description": "An Nx Monorepo setup with React, Vite, Tailwind CSS, and Shadcn UI.",
   "license": "MIT",
