--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "build:affected": "nx affected --target=build",
     "build:all": "nx run-many --target=build --all",
-    "build": "nx build",
+    "build": "nx build demo --configuration=production",
     "clean": "nx run-many --target=clean --all",
     "format:check": "nx format:check",
     "format": "nx format:write",
