--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,16 @@ jobs:
 
       # Install dependencies
       - name: Install Dependencies
-        run: pnpm install --frozen-lockfile
+        run: |
+          retry() {
+            for i in {1..3}; do
+              "$@" && break || {
+                echo "Retrying in 10 seconds..."
+                sleep 10
+              }
+            done
+          }
+          retry pnpm install --frozen-lockfile
 
       # Install Playwright Browsers
       - name: Install Playwright Browsers
