--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "test:affected": "nx affected --target=test",
     "test:all": "nx run-many --target=test --all",
     "test:e2e": "nx e2e",
-    "test": "nx test",
+    "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
   "husky": {
@@ -129,7 +129,6 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "15.0.6",
-    "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
@@ -137,7 +136,6 @@
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
-    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.31.0",
