--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,9 +41,21 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-
 
+      - name: Prune pnpm store
+        run: pnpm store prune
+
       # Install dependencies
       - name: Install Dependencies
-        run: pnpm install --frozen-lockfile
+        run: |
+          retry() {
+            for i in {1..3}; do
+              "$@" && break || {
+                echo "Retrying in 10 seconds..."
+                sleep 10
+              }
+            done
+          }
+          retry pnpm install --frozen-lockfile
 
       # Install Playwright Browsers
       - name: Install Playwright Browsers
