--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,8 +34,20 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-
 
+      - name: Prune pnpm store
+        run: pnpm store prune
+
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: |
+          retry() {
+            for i in {1..3}; do
+              "$@" && break || {
+                echo "Retrying in 10 seconds..."
+                sleep 10
+              }
+            done
+          }
+          retry pnpm install --frozen-lockfile
 
       - name: Build project
         run: pnpm exec nx build demo --configuration=production
