Add error handling for routing
Fixes #19

Add error handling for routing and set base URL for local and production environments.

* **Base URL Configuration:**
  - Replace `<base href="%BASE_URL%"/>` with `<base href={import.meta.env.BASE_URL}/>` in `apps/demo/index.html`.
  - Use `import.meta.env.BASE_URL` for all routes in `apps/demo/src/app/app.tsx`.

* **Error Handling:**
  - Apply `withErrorHandling` HOC to the main `App` component in `apps/demo/src/app/app.tsx`.
  - Add a try-catch block for rendering errors and routing issues in `apps/demo/src/main.tsx`.
  - Display a user-friendly error page in the catch block in `apps/demo/src/main.tsx`.

* **Playwright Configuration:**
  - Set the `baseURL` for both local and production environments in `apps/demo-e2e/playwright.config.ts`.

* **CI Pipeline:**
  - Include steps for running Playwright tests in the CI pipeline in `.github/workflows/ci.yml`.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/CambridgeMonorail/react-weapons-of-choice/issues/19?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,15 +66,15 @@ jobs:
         run: pnpm exec nx affected -t lint test build --base=origin/main --head=HEAD
 
       # Start Application
-      # - name: Start Application
-      #   run: pnpm exec nx run riffroll:preview &
-      #   env:
-      #      CI: true
+      - name: Start Application
+        run: pnpm exec nx run demo:preview &
+        env:
+          CI: true
 
       # Wait for Application to be Ready
-      # - name: Wait for Application to be Ready
-      #   run: npx wait-on http://localhost:4300
+      - name: Wait for Application to be Ready
+        run: npx wait-on http://localhost:4300
 
       # Run E2E Tests
-      # - name: Run E2E Tests
-      #   run: pnpm exec nx affected -t e2e --base=origin/main --head=HEAD
+      - name: Run E2E Tests
+        run: pnpm exec nx affected -t e2e --base=origin/main --head=HEAD
