feat: add debug logging functionality to the app and deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,7 @@ jobs:
       - name: Build project
         run: |
           export BASE_URL='/react-weapons-of-choice/'
+          export DEBUG='true'
           pnpm exec nx build demo --configuration=production
 
       # Upload artifact for deployment
