--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           export BASE_URL='/react-weapons-of-choice/'
           export DEBUG='true'
-          pnpm exec nx build demo --configuration=production
+          pnpm exec nx build demo --configuration=production --base=$BASE_URL
 
       # Upload artifact for deployment
       - name: Upload to GitHub Pages artifact
