--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "nrwl.angular-console",
     "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint",
     "ms-playwright.playwright",
     "firsttris.vscode-jest-runner"
   ]
