--- a/nx.json
+++ b/nx.json
@@ -6,15 +6,16 @@
       "default",
       "!{projectRoot}/**/?(*.)+(spec|test).[jt]s?(x)?(.snap)",
       "!{projectRoot}/tsconfig.spec.json",
+      "!{projectRoot}/src/test-setup.[jt]s",
       "!{projectRoot}/.eslintrc.json",
       "!{projectRoot}/eslint.config.js",
       "!{projectRoot}/jest.config.[jt]s",
-      "!{projectRoot}/src/test-setup.[jt]s",
       "!{projectRoot}/test-setup.[jt]s"
     ],
     "sharedGlobals": ["{workspaceRoot}/.github/workflows/ci.yml"]
   },
   "neverConnectToCloud": true,
+  "useCloud": false,
   "plugins": [
     {
       "plugin": "@nx/vite/plugin",
@@ -62,5 +63,6 @@
         "unitTestRunner": "vitest"
       }
     }
-  }
+  },
+  "packageManager": "pnpm"
 }
