--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "description": "An Nx Monorepo setup with React, Vite, Tailwind CSS, and Shadcn UI.",
   "license": "MIT",
+  "homepage": "https://cambridgemonorail.github.io/react-weapons-of-choice",
   "repository": {
     "type": "git",
     "url": "https://github.com/CambridgeMonorail/react-weapons-of-choice.git"
   },
-  "homepage": "https://cambridgemonorail.github.io/react-weapons-of-choice",
+
   "keywords": [
     "nx",
     "react",
@@ -23,37 +24,26 @@
   "scripts": {
     "build:affected": "nx affected --target=build",
     "build:all": "nx run-many --target=build --all",
-    "build": "nx build demo --configuration=production",
+    "build:demo": "nx build demo",
+    "build:shared": "nx build shared",
     "clean": "nx run-many --target=clean --all",
     "format:check": "nx format:check",
     "format": "nx format:write",
     "lint:affected": "nx affected --target=lint",
     "lint:all": "nx run-many --target=lint --all",
-    "lint": "nx lint",
-    "precommit": "pnpm run lint:all && pnpm run typecheck && pnpm run build:all && pnpm run test:all ",
+    "lint:demo": "nx lint demo",
+    "lint:shared": "nx lint shared",
+    "precommit": "pnpm run lint:all && pnpm run type-check:all && pnpm run build:all && pnpm run test:all ",
     "prepare": "husky",
     "serve:demo": "nx serve demo",
     "test:affected": "nx affected --target=test",
     "test:all": "nx run-many --target=test --all",
-    "test:e2e": "nx e2e",
-    "test": "vitest",
-    "typecheck": "tsc --noEmit"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "pnpm run precommit"
-    }
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "nx lint",
-      "nx test --bail --findRelatedTests",
-      "nx build --dry-run"
-    ],
-    "*.{json,md}": [
-      "prettier --write"
-    ]
+    "test:demo": "nx test demo",
+    "test:shared": "nx test shared",
+    "type-check:affected": "nx affected --target=type-check",
+    "type-check:all": "nx run-many --target=type-check --all",
+    "type-check:demo": "nx run demo:type-check",
+    "type-check:shared": "nx run shared:type-check"
   },
   "private": true,
   "packageManager": "pnpm@8.6.3",
@@ -69,7 +59,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
-    "@radix-ui/react-icons": "^1.0.0",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.1",
@@ -87,23 +77,23 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
     "input-otp": "^1.4.1",
-    "lucide-react": "^0.460.0",
+    "lucide-react": "^0.462.0",
     "next-themes": "^0.4.3",
     "react": "18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.2",
     "react-resizable-panels": "^2.1.7",
-    "react-router-dom": "6.11.2",
+    "react-router-dom": "^7.0.1",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
     "zod": "^3.23.8"
@@ -112,16 +102,16 @@
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
-    "@nx/cypress": "20.0.0",
-    "@nx/devkit": "20.0.0",
-    "@nx/eslint": "20.0.0",
-    "@nx/eslint-plugin": "20.0.0",
-    "@nx/js": "20.0.0",
-    "@nx/playwright": "20.0.0",
-    "@nx/react": "20.0.0",
-    "@nx/vite": "20.0.0",
-    "@nx/web": "20.0.0",
-    "@nx/workspace": "20.0.0",
+    "@nx/devkit": "20.1.4",
+    "@nx/eslint": "20.1.4",
+    "@nx/eslint-plugin": "20.1.4",
+    "@nx/jest": "20.1.4",
+    "@nx/js": "20.1.4",
+    "@nx/playwright": "20.1.4",
+    "@nx/react": "20.1.4",
+    "@nx/vite": "20.1.4",
+    "@nx/web": "20.1.4",
+    "@nx/workspace": "20.1.4",
     "@playwright/test": "^1.36.0",
     "@shadcn/ui": "^0.0.4",
     "@swc-node/register": "~1.9.1",
@@ -132,23 +122,26 @@
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
-    "eslint": "^8.57.0",
+    "babel-jest": "^29.7.0",
+    "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-hooks": "5.0.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "~22.1.0",
     "lint-staged": "^15.2.10",
-    "nx": "20.0.0",
+    "nx": "20.1.4",
+    "pnpm": "^9.12.2",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "tailwindcss": "3.4.3",
