--- a/apps/demo-e2e/tsconfig.json
+++ b/apps/demo-e2e/tsconfig.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "allowJs": true,
     "outDir": "../../dist/out-tsc",
-    "module": "commonjs",
-    "sourceMap": false
+    "sourceMap": true,
+    "module": "commonjs"
   },
   "include": [
     "**/*.ts",
