--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "type": "git",
     "url": "https://github.com/CambridgeMonorail/react-weapons-of-choice.git"
   },
-
   "keywords": [
     "nx",
     "react",
@@ -36,6 +35,7 @@
     "precommit": "pnpm run lint:all && pnpm run type-check:all && pnpm run build:all && pnpm run test:all ",
     "prepare": "husky",
     "serve:demo": "nx serve demo",
+    "serve:storybook": "nx storybook storybook-host",
     "test:affected": "nx affected --target=test",
     "test:all": "nx run-many --target=test --all",
     "test:demo": "nx test demo",
@@ -109,11 +109,16 @@
     "@nx/js": "20.1.4",
     "@nx/playwright": "20.1.4",
     "@nx/react": "20.1.4",
+    "@nx/storybook": "20.1.4",
     "@nx/vite": "20.1.4",
     "@nx/web": "20.1.4",
     "@nx/workspace": "20.1.4",
     "@playwright/test": "^1.36.0",
     "@shadcn/ui": "^0.0.4",
+    "@storybook/addon-essentials": "^8.2.8",
+    "@storybook/core-server": "^8.2.8",
+    "@storybook/react": "^8.2.8",
+    "@storybook/react-vite": "^8.2.8",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
@@ -144,6 +149,7 @@
     "pnpm": "^9.12.2",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
+    "storybook": "^8.2.8",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
