--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,10 @@ jobs:
 
       # Run Nx Affected Tasks
       - name: Run Nx Affected Tasks
-        run: pnpm exec nx affected -t lint test build --base=origin/main --head=HEAD
+        run: |
+          pnpm exec nx affected -t lint --base=origin/main --head=HEAD --exclude=storybook-host
+          pnpm exec nx affected -t test --base=origin/main --head=HEAD --exclude=storybook-host
+          pnpm exec nx affected -t build --base=origin/main --head=HEAD --exclude=storybook-host
 
       # Start Application
       # - name: Start Application
