--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@rwoc/shared": ["libs/shared/src/index.ts"],
       "@rwoc/shared/*": ["libs/shared/src/*"],
+      "shell": ["libs/shell/src/index.ts"],
       "storybook-host": ["libs/storybook-host/src/index.ts"]
     }
   },
