--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@rwoc/shadcnui": ["libs/shadcnui/src/index.ts"],
       "@rwoc/shadcnui/*": ["libs/shadcnui/src/*"],
+      "common-tailwind": ["libs/common-tailwind/src/index.ts"],
       "shell": ["libs/shell/src/index.ts"],
       "storybook-host": ["libs/storybook-host/src/index.ts"]
     }
