Update CI workflow to exclude common-tailwind in affected tasks; add implicit dependency for shadcnui in project.json

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,9 +64,9 @@ jobs:
       # Run Nx Affected Tasks
       - name: Run Nx Affected Tasks
         run: |
-          pnpm exec nx affected -t lint --base=origin/main --head=HEAD --exclude=storybook-host
-          pnpm exec nx affected -t test --base=origin/main --head=HEAD --exclude=storybook-host
-          pnpm exec nx affected -t build --base=origin/main --head=HEAD --exclude=storybook-host
+          pnpm exec nx affected -t lint --base=origin/main --head=HEAD --exclude=storybook-host,common-tailwind
+          pnpm exec nx affected -t test --base=origin/main --head=HEAD --exclude=storybook-host,common-tailwind
+          pnpm exec nx affected -t build --base=origin/main --head=HEAD --exclude=storybook-host,common-tailwind
 
       # Start Application
       # - name: Start Application
