Add shell library with sidebar context and navigation components

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,7 +18,7 @@
       "@rwoc/shadcnui": ["libs/shadcnui/src/index.ts"],
       "@rwoc/shadcnui/*": ["libs/shadcnui/src/*"],
       "common-tailwind": ["libs/common-tailwind/src/index.ts"],
-      "shell": ["libs/shell/src/index.ts"],
+      "@rwoc/shell": ["libs/shell/src/index.ts"],
       "storybook-host": ["libs/storybook-host/src/index.ts"]
     }
   },
