--- a/apps/demo/tsconfig.app.json
+++ b/apps/demo/tsconfig.app.json
@@ -21,5 +21,5 @@
     "vite.config.ts",
     "vitest.config.ts"
   ],
-  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"]
+  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx", "../../libs/shell/src/lib/nav/NavMain.tsx", "../../libs/shell/src/lib/nav/NavUser.tsx", "../../libs/shell/src/lib/nav/TeamSwitcher.tsx"]
 }
