Refactor imports in LandingPage and AboutPage components to use centralized landing library

--- a/apps/demo/project.json
+++ b/apps/demo/project.json
@@ -13,5 +13,5 @@
       }
     }
   },
-  "implicitDependencies": ["shadcnui", "shell"]
+  "implicitDependencies": ["shadcnui", "shell", "landing"]
 }
