--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,7 +19,7 @@
       "@rwoc/shadcnui/*": ["libs/shadcnui/src/*"],
       "@rwoc/shell": ["libs/shell/src/index.ts"],
       "common-tailwind": ["libs/common-tailwind/src/index.ts"],
-      "landing": ["libs/landing/src/index.ts"],
+      "@rwoc/landing": ["libs/landing/src/index.ts"],
       "shadcnui-blocks": ["libs/shadcnui-blocks/src/index.ts"],
       "storybook-host": ["libs/storybook-host/src/index.ts"]
     }
