chore(nx): update workspace layout and package manager settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "github.copilot.chat.codeGeneration.useInstructionFiles": true
+  "github.copilot.chat.codeGeneration.useInstructionFiles": true,
+  "github.copilot.chat.commitMessageGeneration.instructions": [
+    {
+      "text": "Adhere to the Conventional Commits specification for all commit messages. The format is:\n\n<type>(<scope>): <description>\n\nWhere:\n- **type**: One of 'feat', 'fix', 'docs', 'style', 'refactor', 'test', or 'chore'.\n- **scope**: The affected module or feature (e.g., 'auth', 'dashboard').\n- **description**: A concise summary of the change in the imperative mood.\n\nIf the current branch name includes a GitHub issue number in the format 'issue-<number>', append 'Closes #<number>' in the commit message footer to link the commit to the issue."
+    }
+  ]
 }
