--- a/nx.json
+++ b/nx.json
@@ -76,5 +76,8 @@
       }
     }
   },
-  "packageManager": "pnpm"
+  "packageManager": "pnpm",
+  "workspaceLayout": {
+    "ignoreWorkspaceRootCheck": true
+  }
 }
