--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "precommit": "pnpm run lint:all && pnpm run type-check:all && pnpm run build:all && pnpm run test:all ",
     "prepare": "husky",
     "serve:demo": "nx serve demo",
-    "serve:storybook": "nx storybook storybook-host",
+    "serve:storybook": "STORYBOOK_DISABLE_TELEMETRY=true nx storybook storybook-host",
     "test:affected": "nx affected --target=test",
     "test:all": "nx run-many --target=test --all",
     "test:demo": "nx test demo",
@@ -102,23 +102,23 @@
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
-    "@nx/devkit": "20.1.4",
-    "@nx/eslint": "20.1.4",
-    "@nx/eslint-plugin": "20.1.4",
-    "@nx/jest": "20.1.4",
-    "@nx/js": "20.1.4",
-    "@nx/playwright": "20.1.4",
-    "@nx/react": "20.1.4",
-    "@nx/storybook": "20.1.4",
-    "@nx/vite": "20.1.4",
-    "@nx/web": "20.1.4",
-    "@nx/workspace": "20.1.4",
+    "@nx/devkit": "20.2.2",
+    "@nx/eslint": "20.2.2",
+    "@nx/eslint-plugin": "20.2.2",
+    "@nx/jest": "20.2.2",
+    "@nx/js": "20.2.2",
+    "@nx/playwright": "20.2.2",
+    "@nx/react": "20.2.2",
+    "@nx/storybook": "20.2.2",
+    "@nx/vite": "20.2.2",
+    "@nx/web": "20.2.2",
+    "@nx/workspace": "20.2.2",
     "@playwright/test": "^1.36.0",
     "@shadcn/ui": "^0.0.4",
-    "@storybook/addon-essentials": "^8.2.8",
-    "@storybook/core-server": "^8.2.8",
-    "@storybook/react": "^8.2.8",
-    "@storybook/react-vite": "^8.2.8",
+    "@storybook/addon-essentials": "8.4.6",
+    "@storybook/core-server": "8.4.6",
+    "@storybook/react": "8.4.6",
+    "@storybook/react-vite": "8.4.6",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
@@ -133,6 +133,7 @@
     "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.31.0",
@@ -145,7 +146,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "~22.1.0",
     "lint-staged": "^15.2.10",
-    "nx": "20.1.4",
+    "nx": "20.2.2",
     "pnpm": "^9.12.2",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
@@ -154,7 +155,7 @@
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.5.2",
+    "typescript": "5.6.3",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.0",
     "vite-plugin-dts": "~3.8.1",
