--- a/libs/storybook-host/project.json
+++ b/libs/storybook-host/project.json
@@ -5,5 +5,6 @@
   "projectType": "library",
   "tags": [],
   "// targets": "to see all targets run: nx show project storybook-host --web",
-  "targets": {}
+  "targets": {},
+  "implicitDependencies": ["landing", "demo"]
 }
