--- a/package.json
+++ b/package.json
@@ -115,10 +115,10 @@
     "@nx/workspace": "20.2.2",
     "@playwright/test": "^1.36.0",
     "@shadcn/ui": "^0.0.4",
-    "@storybook/addon-essentials": "8.4.6",
-    "@storybook/core-server": "8.4.6",
-    "@storybook/react": "8.4.6",
-    "@storybook/react-vite": "8.4.6",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/core-server": "^8.4.7",
+    "@storybook/react": "^8.4.7",
+    "@storybook/react-vite": "^8.4.7",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
@@ -150,7 +150,7 @@
     "pnpm": "^9.12.2",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
-    "storybook": "^8.2.8",
+    "storybook": "^8.4.7",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
