--- a/package.json
+++ b/package.json
@@ -115,7 +115,14 @@
     "@nx/workspace": "20.2.2",
     "@playwright/test": "^1.36.0",
     "@shadcn/ui": "^0.0.4",
+    "@storybook/addon-a11y": "^8.4.7",
+    "@storybook/addon-docs": "^8.4.7",
     "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
+    "@storybook/addon-styling-webpack": "^1.0.1",
+    "@storybook/addon-themes": "^8.4.7",
+    "@storybook/blocks": "^8.4.7",
     "@storybook/core-server": "^8.4.7",
     "@storybook/react": "^8.4.7",
     "@storybook/react-vite": "^8.4.7",
@@ -151,6 +158,7 @@
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "storybook": "^8.4.7",
+    "storybook-dark-mode": "^4.0.2",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
