--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "@playwright/test": "^1.36.0",
     "@shadcn/ui": "^0.0.4",
     "@storybook/addon-a11y": "^8.4.7",
+    "@storybook/addon-actions": "^8.4.7",
     "@storybook/addon-docs": "^8.4.7",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
