chore(storybook-host): update Storybook configuration and add build targets

--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "build:all": "nx run-many --target=build --all",
     "build:demo": "nx build demo",
     "build:shadcnui": "nx build shadcnui",
+    "build:storybook:affected": "nx affected build-storybook storybook-host",
+    "build:storybook": "nx build-storybook storybook-host",
+    "ci:build:storybook:affected": "nx affected build-storybook storybook-host --runner=ci",
+    "ci:build:storybook": "nx build-storybook storybook-host --runner=ci",
     "clean": "nx run-many --target=clean --all",
     "format:check": "nx format:check",
     "format": "nx format:write",
