--- a/libs/storybook-host/tsconfig.json
+++ b/libs/storybook-host/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
-    "jsx": "react-jsx",
     "allowJs": false,
-    "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
-    "strict": true
+    "esModuleInterop": false,
+    "jsx": "react-jsx",
+    "resolveJsonModule": true,
+    "strict": true,
+    "types": ["vite/client"]
   },
   "files": [],
   "include": [],
