--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "private": true,
   "packageManager": "pnpm@8.6.3",
   "dependencies": {
+    "-": "^0.0.1",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -81,6 +82,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "D": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -174,6 +176,7 @@
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.0",
     "vite-plugin-dts": "~3.8.1",
+    "vite-plugin-react-markdown": "^0.2.10",
     "vitest": "^1.6.0"
   }
 }
