--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,6 +55,12 @@ jobs:
           export DEBUG='true'
           pnpm exec nx build demo --configuration=production --base=$BASE_URL
 
+      - name: Build storybook
+        run: |
+          export BASE_URL='/react-weapons-of-choice/'
+          export DEBUG='true'
+          pnpm exec nx build-storybook storybook-host
+
       # Upload artifact for deployment
       - name: Upload to GitHub Pages artifact
         uses: actions/upload-pages-artifact@v1
