Update workspace layout and enhance Storybook with Tailwind CSS (#91)
* chore(nx): update workspace layout and package manager settings

* docs(landing): add prop types and JSDoc comments for About, Community, Demo, Features, Footer, GetStarted, and Hero sections

* chore(storybook-host): update styles import and add implicit dependencies

* chore(storybook-host): update Storybook configuration and add Tailwind CSS assets

* chore(storybook-host): add Tailwind CSS configuration and custom theme

* chore(landing): remove unused Landing stories and update component titles and descriptions

* chore(storybook-host): update Storybook configuration and add build targets

* chore(storybook-host): update Vite configuration and add TypeScript settings

* chore(storybook-host): update deployment workflow to build Storybook and change output directory

* chore(ci): comment out Playwright Browsers installation step

--- a/libs/storybook-host/project.json
+++ b/libs/storybook-host/project.json
@@ -3,7 +3,67 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/storybook-host/src",
   "projectType": "library",
-  "tags": [],
-  "// targets": "to see all targets run: nx show project storybook-host --web",
-  "targets": {}
+  "tags": ["type:app", "scope:app"],
+  "targets": {
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
+    },
+    "typecheck": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          "tsc -p tsconfig.lib.json --noEmit",
+          "tsc -p tsconfig.spec.json --noEmit"
+        ],
+        "cwd": "libs/storybook-host",
+        "forwardAllArgs": false
+      }
+    },
+    "storybook": {
+      "executor": "@nx/storybook:storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "libs/storybook-host/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@nx/storybook:build",
+      "outputs": ["{options.outputDir}"],
+      "cache": true,
+      "options": {
+        "outputDir": "dist/apps/demo/storybook",
+        "configDir": "libs/storybook-host/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "test-storybook": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "test-storybook -c libs/storybook-host/.storybook --url=http://localhost:4400"
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "storybook-host:build-storybook",
+        "staticFilePath": "libs/storybook/storybook-host/dist"
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "storybook-host:build-storybook:ci"
+        }
+      }
+    }
+  },
+  "implicitDependencies": ["landing", "demo"]
 }
