feat(tagline): migrate Tagline component to shadcnui-blocks and update Footer to accept className prop

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,7 @@
       "@rwoc/shadcnui/*": ["libs/shadcnui/src/*"],
       "@rwoc/shell": ["libs/shell/src/index.ts"],
       "common-tailwind": ["libs/common-tailwind/src/index.ts"],
-      "shadcnui-blocks": ["libs/shadcnui-blocks/src/index.ts"],
+      "@rwoc/shadcnui-blocks": ["libs/shadcnui-blocks/src/index.ts"],
       "storybook-host": ["libs/storybook-host/src/index.ts"]
     }
   },
