Update pnpm references to version 9.15.0
Fixes #107

Update pnpm references to version 9.15.0 in `package.json` and GitHub Actions workflows.

* **package.json**
  - Update `pnpm` version to `^9.15.0` in `devDependencies`.
  - Add `engines` field specifying `pnpm` version ">=9.15.0".

* **.github/workflows/ci.yml**
  - Use `pnpm/action-setup@v2` to specify `pnpm` version `9.15.0`.

* **.github/workflows/deploy.yml**
  - Use `pnpm/action-setup@v2` to specify `pnpm` version `9.15.0`.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/CambridgeMonorail/react-weapons-of-choice/issues/107?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,9 @@ jobs:
 
       # Install pnpm
       - name: Install pnpm
-        run: npm install -g pnpm@9.12.2
+        uses: pnpm/action-setup@v2
+        with:
+          version: 9.15.0
 
       # Cache pnpm dependencies using actions/cache@v4
       - name: Cache pnpm store
