--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,9 @@ jobs:
           node-version: '22'
 
       - name: Install pnpm
-        run: npm install -g pnpm@9.12.2
+        uses: pnpm/action-setup@v2
+        with:
+          version: 9.15.0
 
       - name: Cache pnpm dependencies
         uses: actions/cache@v4
