--- a/package.json
+++ b/package.json
@@ -163,7 +163,7 @@
     "jsdom": "~22.1.0",
     "lint-staged": "^15.2.10",
     "nx": "20.2.2",
-    "pnpm": "^9.12.2",
+    "pnpm": "^9.15.0",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "storybook": "^8.4.7",
@@ -178,5 +178,8 @@
     "vite-plugin-dts": "~3.8.1",
     "vite-plugin-react-markdown": "^0.2.10",
     "vitest": "^1.6.0"
+  },
+  "engines": {
+    "pnpm": ">=9.15.0"
   }
 }
