--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "D": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -163,7 +162,7 @@
     "jsdom": "~22.1.0",
     "lint-staged": "^15.2.10",
     "nx": "20.2.2",
-    "pnpm": "^9.12.2",
+    "pnpm": "^9.15.0",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "storybook": "^8.4.7",
@@ -178,5 +177,8 @@
     "vite-plugin-dts": "~3.8.1",
     "vite-plugin-react-markdown": "^0.2.10",
     "vitest": "^1.6.0"
+  },
+  "engines": {
+    "pnpm": ">=9.15.0"
   }
 }
