--- a/libs/shadcnui-blocks/project.json
+++ b/libs/shadcnui-blocks/project.json
@@ -5,5 +5,6 @@
   "projectType": "library",
   "tags": [],
   "// targets": "to see all targets run: nx show project shadcnui-blocks --web",
-  "targets": {}
+  "targets": {},
+  "implicitDependencies": ["shadcnui"]
 }
