Enhance setup script with user prompts, validation, and feedback
Fixes #167

Add a setup script to automate project personalization.

* **scripts/setup.js**: Add a new setup script that prompts the user for new values, performs text replacements, updates the Git remote, and provides progress indicators and feedback.
* **package.json**: Add a new script entry for the setup script under "scripts".
* **README.md**: Update the "Make This Your Own" section to reflect the changes in the setup script and provide clear instructions for users on how to run the setup script.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/CambridgeMonorail/react-weapons-of-choice/issues/167?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "type-check:affected": "nx affected --target=type-check",
     "type-check:all": "nx run-many --target=type-check --all",
     "type-check:demo": "nx run demo:type-check",
-    "type-check:shadcnui": "nx run shadcnui:type-check"
+    "type-check:shadcnui": "nx run shadcnui:type-check",
+    "setup": "node ./scripts/setup.js"
   },
   "private": true,
   "packageManager": "pnpm@8.6.3",
