chore(workflows): switch from npm to pnpm for global package installation

--- a/.github/workflows/lighthouse-audit.yml
+++ b/.github/workflows/lighthouse-audit.yml
@@ -42,7 +42,7 @@ jobs:
         id: generate-token
         run: |
           # Install required libraries
-          npm install -g jsonwebtoken @octokit/auth-app
+          pnpm add -g jsonwebtoken @octokit/auth-app
 
           # Generate a token for the GitHub App
           node <<EOF
