Add commit author check to CI and deploy workflows (#180)
* chore(workflows): add commit author check to CI and deploy workflows

* chore(workflows): enhance Lighthouse audit workflow with GitHub App token generation and commit author check

* chore(workflows): add missing exit condition for Monorail Updater in Lighthouse audit workflow

* chore(workflows): update Lighthouse audit configuration and clean up temporary files

* chore(workflows): add missing exit condition for Monorail Updater in Lighthouse audit workflow

* chore(workflows): add missing exit condition in Lighthouse audit workflow

* chore(workflows): specify categories for Lighthouse audit settings

* chore(workflows): clean up Lighthouse configuration file after audit

--- a/.github/workflows/lighthouse-audit.yml
+++ b/.github/workflows/lighthouse-audit.yml
@@ -14,6 +14,7 @@ jobs:
   update-badges:
     runs-on: ubuntu-latest
     steps:
+      # Generate GitHub App token
       - name: Generate GitHub App token
         id: generate-app-token
         uses: getsentry/action-github-app-token@v1.0.6
@@ -21,48 +22,89 @@ jobs:
           app_id: ${{ secrets.APP_ID }}
           private_key: ${{ secrets.APP_PRIVATE_KEY }}
 
+      # Check out the repository
       - name: Check out the repository
         uses: actions/checkout@v3
         with:
           token: ${{ steps.generate-app-token.outputs.token }}
 
-      - name: Check commit author
-        id: check-author
-        run: |
-          AUTHOR=$(git log -1 --pretty=format:'%an')
-          if [ "$AUTHOR" = "Monorail Updater" ]; then
-            echo "Commit made by Monorail Updater, exiting..."
-            exit 1
-          fi
-        continue-on-error: true
-
+      # Log commit author
       - name: Log commit author
         if: success()
         run: |
           AUTHOR=$(git log -1 --pretty=format:'%an')
           echo "Commit author: $AUTHOR"
 
+      # Check commit author
+      - name: Check commit author
+        id: check-author
+        run: |
+          AUTHOR=$(git log -1 --pretty=format:'%an')
+          if [ "$AUTHOR" = "Monorail Updater" ]; then
+            echo "Commit made by Monorail Updater, exiting..."
+            exit 0
+          fi
+
+      # Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '22'
 
+      # Set up pnpm
       - name: Set up pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 9.15.0
 
+      # Install dependencies
       - name: Install dependencies
         run: pnpm install
 
-      - name: Generate Lighthouse badges
-        run: pnpx lighthouse-badges --url='https://cambridgemonorail.github.io/react-weapons-of-choice/' --output-path='./lighthouse-badges'
+      # Create Lighthouse configuration file
+      - name: Create Lighthouse configuration file
+        run: |
+          cat << 'EOF' > .lighthouse-config.json
+          {
+            "extends": "lighthouse:default",
+            "settings": {
+              "onlyCategories": ["performance", "accessibility", "best-practices", "seo"],
+              "maxWaitForFcp": 15000,
+              "maxWaitForLoad": 35000,
+              "formFactor": "desktop",
+              "screenEmulation": {
+                "mobile": false,
+                "width": 1350,
+                "height": 940,
+                "deviceScaleFactor": 1,
+                "disabled": false
+              },
+              "emulatedUserAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Safari/537.36",
+              "skipAudits": [
+                "uses-http2",
+                "bf-cache"
+              ]
+            }
+          }
+          EOF
 
+      # Generate Lighthouse badges
+      - name: Generate Lighthouse badges
+        env:
+          LIGHTHOUSE_BADGES_CONFIGURATION_PATH: '.lighthouse-config.json'
+        run: pnpx lighthouse-badges --url='https://cambridgemonorail.github.io/react-weapons-of-choice/' --output-path='./lighthouse-badges'
+   
+      # Clean up Lighthouse configuration file
+      - name: Clean up
+        run: rm .lighthouse-config.json
+
+      # Configure Git
       - name: Configure Git
         run: |
           git config user.name "Monorail Updater"
           git config user.email "monorail-updater@users.noreply.github.com"
 
+      # Commit and push changes
       - name: Commit and push changes
         run: |
           git add ./lighthouse-badges/*
