--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,12 +19,19 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Check Commit Author
+        id: check-author
         run: |
           AUTHOR=$(git log -1 --pretty=format:'%an')
+          echo "::set-output name=author::$AUTHOR"
           if [ "$AUTHOR" = "Monorail Updater" ]; then
             echo "Commit author is Monorail Updater. Exiting..."
             exit 0
           fi
+
+      # Exit if commit author is Monorail Updater
+      - name: Exit if commit author is Monorail Updater
+        if: steps.check-author.outputs.author == 'Monorail Updater'
+        run: exit 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
