chore(ci, deploy, lighthouse-audit): specify categories for Lighthouse audit

--- a/.github/workflows/lighthouse-audit.yml
+++ b/.github/workflows/lighthouse-audit.yml
@@ -75,6 +75,7 @@ jobs:
           {
             "extends": "lighthouse:default",
             "settings": {
+              "onlyCategories": ["performance", "accessibility", "best-practices", "seo"],
               "formFactor": "desktop",
               "screenEmulation": {
                 "mobile": false,
