--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,11 +15,11 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@rwoc/landing": ["libs/landing/src/index.ts"],
-      "@rwoc/shadcnui": ["libs/shadcnui/src/index.ts"],
-      "@rwoc/shadcnui-blocks": ["libs/shadcnui-blocks/src/index.ts"],
-      "@rwoc/shadcnui/*": ["libs/shadcnui/src/*"],
-      "@rwoc/shell": ["libs/shell/src/index.ts"],
+      "@erisfy/landing": ["libs/landing/src/index.ts"],
+      "@erisfy/shadcnui": ["libs/shadcnui/src/index.ts"],
+      "@erisfy/shadcnui-blocks": ["libs/shadcnui-blocks/src/index.ts"],
+      "@erisfy/shadcnui/*": ["libs/shadcnui/src/*"],
+      "@erisfy/shell": ["libs/shell/src/index.ts"],
       "common-tailwind": ["libs/common-tailwind/src/index.ts"],
       "storybook-host": ["libs/storybook-host/src/index.ts"]
     }
